add some javadoc.